--- a/_posts/2018-10-15-一致性Hash算法.md
+++ b/_posts/2018-10-15-一致性Hash算法.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      一致性Hash算法
+title:      一致性Hash算法（转）
 subtitle:   java基础
 date:       2018-10-15
 author:     TBKK
