--- a/_posts/2018-11-15-分布式事务类型和适用场景.md
+++ b/_posts/2018-11-15-分布式事务类型和适用场景.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 
-# 一、事务和分布式事务
+# 事务和分布式事务
 
 单机事务我们经常看到，分布式事务，通俗点将，就是需要在各个机器上跑的事务，但是事务的每一步都不知道其他步是否成功，但是在业务上又要保证，所有的步骤，要么都成功，要么都不成功。
 
