--- a/_posts/2018-11-15-分布式事务类型和适用场景.md
+++ b/_posts/2018-11-15-分布式事务类型和适用场景.md
@@ -24,7 +24,7 @@ tags:
 5. 基于2PC实现的分布式事务
 
 ### 何时使用单机事务
-这个相信大家都很清楚，在条件允许的情况下，<font color=#ff0000>我们应该尽可能地使用单机事务</font>，因为单机事务里，无需额外协调其他数据源，减少了网络交互时间消耗以及协调时所需的存储IO消耗，在修改等量业务数据的情况下，单机事务将会有更高的性能。
+这个相信大家都很清楚，在条件允许的情况下，**我们应该尽可能地使用单机事务**，因为单机事务里，无需额外协调其他数据源，减少了网络交互时间消耗以及协调时所需的存储IO消耗，在修改等量业务数据的情况下，单机事务将会有更高的性能。
 
 ### 何时选择基于消息实现的事务？
 基于消息实现的事务适用于分布式事务的提交或回滚只取决于事务发起方的业务需求，其他数据源的数据变更跟随发起方进行的业务场景。
@@ -85,7 +85,7 @@ tags:
 现金服务编写扣除现金的逻辑
 现金服务编写解冻现金的逻辑
 **TCC实际上是最为复杂的一种情况，其能处理所有的业务场景，但无论出于性能上的考虑，还是开发复杂度上的考虑，都应该尽量避免该类事务。**
-<font color=#ff0000 size=4>所以我们开发了TCC框架，来对应大多数的业务场景，大家可以搜一下TCC框架</font>
+**所以我们开发了TCC框架，来对应大多数的业务场景，大家可以搜一下TCC框架**
 
 ### 何时选择利用SAGA实现的事务？
 SAGA可以看做一个异步的、利用队列实现的补偿事务。
