--- a/_posts/2019-01-15-脱离大数据看HBASE-架构.md
+++ b/_posts/2019-01-15-脱离大数据看HBASE-架构.md
@@ -14,36 +14,35 @@ tags:
 # HBase整体架构
 
 ![image](http://www.qinxinfeng.com/img/hbase/6.jpg)
+这张架构图，在各大网站均可看到，下面我们分析一下核心组件，虚线一下其实属于HDFS范围了，属于底层支撑了。这种关系举个例子，相当于Mysql之于文件系统,我们只需要看虚线以上的就行了。
 
 
+### HBase核心组件
 
-### HBase核心概念
+#### Client：
+* 使用HBase RPC机制与HMaster和HRegionServer进行通信
+* Client与HMaster进行通信进行管理类操作 
+* Client与HRegionServer进行数据读写类操作 
 
-* RowKey：表中每条记录的主键
-* Column Family：列族，将表进行横向切割，后面简称CF
-* Column：属于某一个列族，可动态添加列； 
-* Version Number：类型为Long，默认值是系统时间戳，可由用户自定义
-* Value：真实的数据
-![image](http://www.qinxinfeng.com/img/hbase/1.jpg)
+#### Zookeeper：
+* Zookeeper Quorum存储-ROOT-表地址、HMaster地址 
+* HRegionServer把自己以Ephedral方式注册到Zookeeper中，HMaster随时感知各个HRegionServer的健康状况 
+* Zookeeper避免HMaster单点问题 
 
-* Region：一段数据的集合
-* RegionServer：用于存放Region的服务。
-![image](http://www.qinxinfeng.com/img/hbase/2.jpg)
+#### HMaster：主要负责Table和Region的管理工作
+* 管理用户对表的增删改查操作 
+* 管理HRegionServer的负载均衡，调整Region分布 
+* Region Split后，负责新Region的分布 
+* 在HRegionServer停机后，负责失效HRegionServer上Region迁移 
 
-### HBase VS Mysql
-![image](http://www.qinxinfeng.com/img/hbase/3.jpg)
+#### HRegionServer：负责HRegion管理工作
 
-### HBase 数据逻辑视图
-从过往记忆大神的PPT里拷贝出来了一张图，觉得很实用,就不重复画了
-![image](http://www.qinxinfeng.com/img/hbase/4.jpg)
+#### HStore：HBase存储的核心。由MemStore和StoreFile组成。 
 
-### HBase 存储模型
-![image](http://www.qinxinfeng.com/img/hbase/5.jpg)
+#### HLog：每次用户操作写入Memstore的同时，也会写一份数据到HLog文件
 
-### HBase 数据特性
-* 支持数据多版本特性。
-* 默认以时间戳作为版本号
-* 默认每条数据3个版本，可以配置
-* 默认返回最新版本，可以通过版本号指定旧数据
+#### HFile：数据文件都存储在Hadoop HDFS文件系统上
+
+
  
 
