--- a/_posts/2018-12-15-脱离大数据看HBASE-快速入门.md
+++ b/_posts/2018-12-15-脱离大数据看HBASE-快速入门.md
@@ -47,5 +47,8 @@ tags:
 * 默认以时间戳作为版本号
 * 默认每条数据3个版本，可以配置
 * 默认返回最新版本，可以通过版本号指定旧数据
+
+## 总结
+本文主要是针对快速入门，HBase并非只有大数据场景才能使用，比如全链路监控pinpoint，他的底层存储就是HBase。
  
 
