--- a/_posts/2019-01-15-脱离大数据看HBASE-架构.md
+++ b/_posts/2019-01-15-脱离大数据看HBASE-架构.md
@@ -43,6 +43,47 @@ tags:
 
 #### HFile：数据文件都存储在Hadoop HDFS文件系统上
 
+### HBase 写数据
+
+![image](http://www.qinxinfeng.com/img/hbase/7.jpg)
+
+* 先写入WAL（write ahead log），WAL存放在HDFS上
+* 每次Put、Delete操作的数据均追加到WAL末端。
+* 持久化到WAL之后，再写到MemStore中 
+* 两者写完返回ACK到客户端
+
+
+### HBase Region FLUSH
+![image](http://www.qinxinfeng.com/img/hbase/8.jpg)
+* 单个RS中所有的MemStore使用达到上限（默认超过堆的40%） 
+* 单个Region中的MemStore超过大小
+* RegionServer的Hlog数量达到上限 。
+* 手动触发 。
+
+### HBase Compaction
+![image](http://www.qinxinfeng.com/img/hbase/9.jpg)
+* Minor Compaction: 
+1. 指选取一些小的相邻的HFile将他们合并成一个更大的Hfile。
+* Major Compaction：
+1. 将一个CF 下所有的 Hfiles 合并成更大的；
+2. 删除那些被标记为删除的数据、超过TTL（time-to-live）时限的数据，以及超过了版本数量限制的数据。
+
+### HBase Split
+![image](http://www.qinxinfeng.com/img/hbase/10.jpg)
+* 可以配置不同的Split规则
+* 主要看Region大小
+
+### HBase 读数据
+![image](http://www.qinxinfeng.com/img/hbase/11.jpg)
+
+### HBase 如何找到数据
+
+![image](http://www.qinxinfeng.com/img/hbase/12.jpg)
+
+## 总结
+本文主要是讲的HBase架构，适用于需要HBase调优的人群。或者常年与HBase打交道的人。
+ 
+
 
  
 
