--- a/_posts/2019-01-15-脱离大数据看HBASE-架构.md
+++ b/_posts/2019-01-15-脱离大数据看HBASE-架构.md
@@ -35,13 +35,17 @@ tags:
 * Region Split后，负责新Region的分布 
 * 在HRegionServer停机后，负责失效HRegionServer上Region迁移 
 
-#### HRegionServer：负责HRegion管理工作
+#### HRegionServer：
+* 负责HRegion管理工作
 
-#### HStore：HBase存储的核心。由MemStore和StoreFile组成。 
+#### HStore：
+* HBase存储的核心。由MemStore和StoreFile组成。 
 
-#### HLog：每次用户操作写入Memstore的同时，也会写一份数据到HLog文件
+#### HLog：
+* 每次用户操作写入Memstore的同时，也会写一份数据到HLog文件
 
-#### HFile：数据文件都存储在Hadoop HDFS文件系统上
+#### HFile：
+* 数据文件都存储在Hadoop HDFS文件系统上
 
 ### HBase 写数据
 
