--- a/_posts/2019-03-15-脱离大数据看HBASE-检索增强.md
+++ b/_posts/2019-03-15-脱离大数据看HBASE-检索增强.md
@@ -15,6 +15,8 @@ tags:
 
 大量业务数据迁移到HBase存储，开始查询设计符合业务需求的Rowkey，比如从关系数据库迁移过来，有些数据关系通过反规范化设计，使得整体查询在HBase中能符合Rowkey高效查询⽅方式.
 
+![image](http://www.qinxinfeng.com/img/hbase/16.jpg)
+
 
 
 # 总结
