--- a/_posts/2019-01-15-大数据组件之HBASE-架构.md
+++ b/_posts/2019-01-15-大数据组件之HBASE-架构.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      脱离大数据看HBASE-架构
+title:      大数据组件之HBASE-架构
 subtitle:   HBase
 date:       2019-01-19
 author:     TBKK
 header-img: img/post-bg-hacker.jpg
 catalog: true
 tags:
-    - JAVA
+    - 大数据
 ---
 
 
