--- a/_posts/2018-12-15-大数据组件之HBASE-快速入门.md
+++ b/_posts/2018-12-15-大数据组件之HBASE-快速入门.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      脱离大数据看HBASE-快速入门
+title:      大数据组件之HBASE-快速入门
 subtitle:   HBase
 date:       2018-12-19
 author:     TBKK
 header-img: img/post-bg-hacker.jpg
 catalog: true
 tags:
-    - JAVA
+    - 大数据
 ---
 
 
