--- a/_posts/2019-03-15-大数据组件之HBASE-检索增强.md
+++ b/_posts/2019-03-15-大数据组件之HBASE-检索增强.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      脱离大数据看HBASE-检索增强
+title:      大数据组件之HBASE-检索增强
 subtitle:   HBase
 date:       2019-03-19
 author:     TBKK
 header-img: img/post-bg-hacker.jpg
 catalog: true
 tags:
-    - JAVA
+    - 大数据
 ---
 
 
