--- a/_posts/2019-05-15-跟我一起写RPC（一）.md
+++ b/_posts/2019-05-15-跟我一起写RPC（一）.md
@@ -12,7 +12,11 @@ tags:
 
 
 # 什么是RPC
+Remote Procedure Call，远程过程调用。也就是说，调用过程代码并不是在调用者本地运行，而是要实现调用者与被调用者二地之间的连接与通信。
 
+通俗的说：老婆坐在沙发上不想动，想吃橘子，于是乎说：“TBKK，我要吃橘子”，我收到指令，下楼->到水果店->买橘子->上楼->剥橘子->递给老婆。这就是一个RPC调用。
+
+对于我老婆来说，吃到了橘子，又不用跑腿，省下了体力，至于我怎么弄到橘子的，她不用关心。这就是RPC。
 
 # 总结
 RPC框架在公司的架构演变进化中不可或缺，但是并不是每个框架都适合自己的业务场景，所以生产出一套能自己驾驭的RPC框架尤为重要。
