--- a/_posts/2019-06-15-跟我一起写RPC（二）.md
+++ b/_posts/2019-06-15-跟我一起写RPC（二）.md
@@ -126,8 +126,33 @@ public abstract class RegisterCenter {
 }
 ``` 
 
+3. 无论用什么注册中心，封装一下，实现这种接口就行了
+基于zk作为存储介质，入口如下：
+``` 
+    //开启注册中心
+    private void start(String zkAddress, String zkDigest, String env)
+    {
+    
+        zkEnvPath = zkBasePath.concat("/").concat(env);
+        yoyoZkClient = new YoyoZkClient(zkAddress, zkEnvPath, zkDigest, new ZkRegisterCenterWatcher(this));
+        yoyoZkClient.initClient();
+        refreshThread = new ZkRegisterCenterRefreshThread(this);
+        refreshThread.setName("ZkRegisterCenterRefreshThread");
+        refreshThread.setDaemon(true);
+        refreshThread.start();
+        log.info("yoyo-rpc, ZkRegisterCenter init success. [env={}]", env);
+    }
+```  
+* ZkRegisterCenterRefreshThread：
+    * 服务信息异常兜底方案（开启刷新线程，定时刷新）
+* YoyoZkClient:
+    * zk的客户端操作封装，与服务信息的存储方式相关
+* ZkRegisterCenterWatcher：
+    * 远端服务信息发生了改变的一个Hook，刷新本地缓存。
+    
+具体代码可以在([https://github.com/tbkk/yoyo-rpc](https://github.com/tbkk/yoyo-rpc))看到
 # 总结
-注册中心的实现方式有很多，可延伸的也很多。后面会写一遍关于zk的文章。
+这就是见到的注册中心，如果需要使用自研注册中心，实现以上接口即可。
 
  
 
