--- a/_posts/2018-09-15-最常用的设计模式-单例.md
+++ b/_posts/2018-09-15-最常用的设计模式-单例.md
@@ -7,7 +7,7 @@ author:     TBKK
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - JAVA
+    - 设计模式
 ---
 
 ### Spring横行的今天看似自己写单例的时候不多啊.
