--- a/_posts/2018-09-15-最常用的设计模式-单例.md
+++ b/_posts/2018-09-15-最常用的设计模式-单例.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      最常用的设计模式-单例
-subtitle:   java基础
+subtitle:   设计模式
 date:       2018-09-19
 author:     TBKK
 header-img: img/post-bg-cook.jpg
