--- a/_posts/2019-07-15-深入理解SPI.md
+++ b/_posts/2019-07-15-深入理解SPI.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      深入理解SPI
-subtitle:   RPC
+subtitle:   java基础
 date:       2019-07-16
 author:     TBKK
 header-img: img/post-bg-cook.jpg
