--- a/_posts/2019-11-15-中间件常用的设计模式-责任链模式.md
+++ b/_posts/2019-11-15-中间件常用的设计模式-责任链模式.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
 title:      间件常用的设计模式-责任链模式
-subtitle:   java基础
-date:       2018-11-15
+subtitle:   设计模式
+date:       2019-11-15
 author:     TBKK
 header-img: img/post-bg-cook.jpg
 catalog: true
