--- a/_posts/2019-10-15-最优美的设计模式-策略模式.md
+++ b/_posts/2019-10-15-最优美的设计模式-策略模式.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
 title:      最优美的设计模式-策略模式
-subtitle:   java基础
-date:       2018-10-15
+subtitle:   设计模式
+date:       2019-10-15
 author:     TBKK
 header-img: img/post-bg-cook.jpg
 catalog: true
