--- a/_posts/2019-11-17-深入理解零拷贝.md
+++ b/_posts/2019-11-17-深入理解零拷贝.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:      深入理解Netty
-subtitle:   Netty
-date:       2018-12-10
+title:      深入理解零拷贝
+subtitle:   零拷贝
+date:       2019-12-10
 author:     TBKK
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - 中间件
+    - java基础
 ---
 
 
