--- a/_posts/2019-07-15-深入理解SPI.md
+++ b/_posts/2019-07-15-深入理解SPI.md
@@ -7,13 +7,12 @@ author:     TBKK
 header-img: img/post-bg-cook.jpg
 catalog: true
 tags:
-    - JAVA
+    - java基础
 ---
 
 
 # 什么是SPI
 # 什么场景使用SPI   
 # 总结
-技术知识为业务服务的，最终为业务场景提供支撑。千万不要局限！
  
 
