--- a/_posts/2019-07-15-深入理解SPI.md
+++ b/_posts/2019-07-15-深入理解SPI.md
@@ -12,7 +12,11 @@ tags:
 
 
 # 什么是SPI
-# 什么场景使用SPI   
+SPI 全称为 (Service Provider Interface) ,是JDK内置的一种服务提供发现机制。 目前有不少框架用它来做服务的扩展发现， 简单来说，它就是一种动态替换发现的机制， 举个例子来说， 有个接口，想运行时动态的给它添加实现，你只需要添加一个实现。
+
+# 什么场景使用SPI
+在需要动态扩展的地方使用SPI，如数据库驱动，spring boot的starter等。
+   
 # 总结
  
 
