--- a/_posts/2019-07-15-深入理解SPI.md
+++ b/_posts/2019-07-15-深入理解SPI.md
@@ -29,14 +29,21 @@ ServiceLoader
 
 从应用领域来说，策略模式更多应用在业务领域，即业务代码书写以及业务代码重构。而 SPI 机制更多则是用于框架的设计领域，通过 SPI 机制提供的灵活性，让框架拥有良好的插件特性，便于扩展。
 
-## 总结一下
-策略模式与 SPI 机制有下面几点异同：
 
-从设计思想来看。策略模式和 SPI 机制其思想是类似的，都是通过一定的设计隔离变化的部分，从而让原有部分更加稳定。
-从隔离级别来看。策略模式的隔离是类级别的隔离，而 SPI 机制是项目级别的隔离。
-从应用领域来看。策略模式更多用在业务代码书写，SPI 机制更多用于框架的设计。
+## 策略模式与 SPI 机制有下面几点异同：
 
-想了解策略模式的可以看我的另外一篇文章【最优美的设计模式-策略模式】
+* 从设计思想来看。
+
+策略模式和 SPI 机制其思想是类似的，都是通过一定的设计隔离变化的部分，从而让原有部分更加稳定。
+* 从隔离级别来看。
+
+策略模式的隔离是类级别的隔离，而 SPI 机制是项目级别的隔离。
+* 从应用领域来看。
+
+策略模式更多用在业务代码书写，SPI 机制更多用于框架的设计。
+
+
+附 ：想了解策略模式的可以看我的另外一篇文章【最优美的设计模式-策略模式】
    
  
 
