--- a/_posts/2019-10-15-最优美的设计模式-策略模式.md
+++ b/_posts/2019-10-15-最优美的设计模式-策略模式.md
@@ -14,13 +14,12 @@ tags:
 
 偶尔看到一段代码：
 
-
 ``` java
-    if (XXX) {
+    if (type == 3000) {
         ...
-    } else if (XXX){
+    } else if (type == 3001){
         ...
-    } else if (XXX){
+    } else if (type == 3002){
         ...
     } else {
         ...
@@ -28,4 +27,25 @@ tags:
 
 ``` 
 
+这种代码有什么问题吗啊？
+1. 代码看上就很low，比这个高级点的就是switch case了
+2. 如果要增加一个type怎么办？
+    * 增加一个if分支
+    * 增加一个相应分支的处理方式
+3. 分支代码和处理代码分散在不同区域，维护困难。
 
+
+比较优雅的代码应该如下：
+
+``` java
+
+@Type(3000)
+public class ExecProcessUnit extends ExecBaseProcessUnit {
+    @Override
+    protected Object exec(ProcessContext ctx) {
+        XXXXXXXX
+    }
+}
+
+``` 
+增加一个注解即可优雅的完成。
