--- a/_posts/2019-10-15-最优美的设计模式-策略模式.md
+++ b/_posts/2019-10-15-最优美的设计模式-策略模式.md
@@ -87,7 +87,7 @@ public class ProcessUnitManager {
             UnitType []   unitTypes  = (UnitType []) clazz.getAnnotationsByType(UnitType.class);
             Arrays.stream(unitTypes).forEach( unitType->
                     {
-                        unitMap.put(unitType.value(), (IProcessUnitConfigLoader)springBeanUtils.getBean(clazz));
+                        unitMap.put(unitType.value(), (ExecBaseProcessUnit)springBeanUtils.getBean(clazz));
                     }
             );
         }
