--- a/_posts/2019-11-20-高并发中的负载均衡.md
+++ b/_posts/2019-11-20-高并发中的负载均衡.md
@@ -11,5 +11,41 @@ tags:
 ---
 
 
-# 敬请期待！  
+# 什么是负载均衡
+
+用白话来讲，就是领导分配任务的时候发现A太忙了，手上全是活儿，然后就让B来做。这就是负载均衡。
+
+# 负载均衡的方式
+
+* DNS负载均衡
+
+DNS负载均衡实时上是最初级的负载均衡，也是最常用的负载均衡。
+即将统一个地址解析到不同的IP地址。
+    * 优势：配置方便，使用快捷，没有单点故障
+    * 劣势：没有负载均衡的策略，客户端本地具有缓存。
+    
+* 软负载均衡
+顾名思义，即用软件方式来做负载均衡，最典型的方式就是使用Nginx，Haproxy，LVS
+    * Nginx
+    
+    所有的流量打向Nginx，再由Nginx进行分发，从而形成负载均衡能力。
+    ![image](http://www.qinxinfeng.com/img/others/nginx1.jpg)
+    
+    Nginx的单点故障问题如何解决呢？
+    可以采用Nginx + keeplived 来解决。
+
+* 硬负载均衡
+
+
+
+1. 老板说：我们融到一笔钱了。我要做个网站。
+* 于是：单体应用诞生，反正也没有什么人看，就一个页面就行了。
+* 有一天，流量突然变大了
+
+
+# 负载均衡的策略
+
+
+
+
 
