--- a/_posts/2019-11-20-高并发中的负载均衡.md
+++ b/_posts/2019-11-20-高并发中的负载均衡.md
@@ -17,33 +17,37 @@ tags:
 
 # 负载均衡的方式
 
-* DNS负载均衡
+## DNS负载均衡
 
 DNS负载均衡实时上是最初级的负载均衡，也是最常用的负载均衡。
 即将统一个地址解析到不同的IP地址。
-    * 优势：配置方便，使用快捷，没有单点故障
-    * 劣势：没有负载均衡的策略，客户端本地具有缓存。
+### DNS域名解析负载均衡有如下优点：
+1. 将负载均衡的工作交给DNS，省去了网站管理维护负载均衡服务器的麻烦。
+2. 技术实现比较灵活、方便，简单易行，成本低，使用于大多数TCP/IP应用。
+3. 对于部署在服务器上的应用来说不需要进行任何的代码修改即可实现不同机器上的应用访问。
+3. 服务器可以位于互联网的任意位置。
+4. 同时许多DNS还支持基于地理位置的域名解析，即会将域名解析成距离用户地理最近的一个服务器地址，这样就可以加速用户访问，改善性能。
+### DNS域名解析也存在如下缺点：
+1. 目前的DNS是多级解析的，每一级DNS都可能缓存A记录，当某台服务器下线之后，即使修改了A记录，要使其生效也需要较长的时间，这段时间，DNS任然会将域名解析到已下线的服务器上，最终导致用户访问失败。
+2. 不能够按服务器的处理能力来分配负载。DNS负载均衡采用的是简单的轮询算法，不能区分服务器之间的差异，不能反映服务器当前运行状态，所以其的负载均衡效果并不是太好。
+3. 可能会造成额外的网络问题。为了使本DNS服务器和其他DNS服务器及时交互，保证DNS数据及时更新，使地址能随机分配，一般都要将DNS的刷新时间设置的较小，但太小将会使DNS流量大增造成额外的网络问题。
     
-* 软负载均衡
+## 软负载均衡
 顾名思义，即用软件方式来做负载均衡，最典型的方式就是使用Nginx，Haproxy，LVS
-    * Nginx
+### Nginx
     
-    所有的流量打向Nginx，再由Nginx进行分发，从而形成负载均衡能力。
-    ![image](http://www.qinxinfeng.com/img/others/nginx1.jpg)
-    
-    Nginx的单点故障问题如何解决呢？
-    可以采用Nginx + keeplived 来解决。
+所有的流量打向Nginx，再由Nginx进行分发，从而形成负载均衡能力。
+![image](http://www.qinxinfeng.com/img/others/nginx1.jpg)
 
-* 硬负载均衡
+Nginx的单点故障问题如何解决呢？
+可以采用Nginx + keeplived 来解决。
+![image](http://www.qinxinfeng.com/img/others/nginx-2.jpg)
 
-
-
-1. 老板说：我们融到一笔钱了。我要做个网站。
-* 于是：单体应用诞生，反正也没有什么人看，就一个页面就行了。
-* 有一天，流量突然变大了
+## 硬负载均衡
 
 
-# 负载均衡的策略
+
+## 负载均衡策略
 
 
 
