--- a/_posts/2019-11-20-高并发中的负载均衡.md
+++ b/_posts/2019-11-20-高并发中的负载均衡.md
@@ -43,6 +43,17 @@ Nginx的单点故障问题如何解决呢？
 可以采用Nginx + keeplived 来解决。
 ![image](http://www.qinxinfeng.com/img/others/nginx-2.jpg)
 
+那如果一台Nginx的能力已经不足以支撑了怎么办呢？
+可以在Nginx的外围再加一层负载
+![image](http://www.qinxinfeng.com/img/others/nginx-3.jpg)
+
+上图中，为什么选择LVS？
+其实上图的LVS的部分可以选很多，比如Haproxy，LVS，F5
+
+* Haproxy ：其实并没有彻底解决问题，还是会和nginx存在同一的问题，即凡是经过此节点进入的流量都必须冲此节点出去。
+* LVS：彻底解决了此问题，他可以将流量转移到单个nginx上，形成无瓶颈的负载均衡
+* F5：土豪使用的硬件负载均衡，唯一的问题就是贵。
+
 ## 硬负载均衡
 
 
