--- a/_posts/2019-11-20-高并发中的负载均衡.md
+++ b/_posts/2019-11-20-高并发中的负载均衡.md
@@ -56,6 +56,8 @@ Nginx的单点故障问题如何解决呢？
 
 ## 硬负载均衡
 
+F5是负载均衡产品的一个品牌，其地位类似于原来诺基亚在手机品牌中的位置。除了F5以外，Radware、Array、A10、Cisco、深信服和华夏创新都是负载均衡的牌子，因为F5在这类产品中影响最大，所以经常说F5负载均衡。
+
 
 
 ## 负载均衡策略
