--- a/_posts/2019-11-20-高并发中的负载均衡.md
+++ b/_posts/2019-11-20-高并发中的负载均衡.md
@@ -58,9 +58,42 @@ Nginx的单点故障问题如何解决呢？
 
 F5是负载均衡产品的一个品牌，其地位类似于原来诺基亚在手机品牌中的位置。除了F5以外，Radware、Array、A10、Cisco、深信服和华夏创新都是负载均衡的牌子，因为F5在这类产品中影响最大，所以经常说F5负载均衡。
 
-
-
 ## 负载均衡策略
+
+* 轮询
+
+轮询。作为非常经典的负载均衡策略，早期该策略应用地非常广泛。其原理很简单，给每个请求标记一个序号，然后将请求依次派发到服务器节点中，适用于集群中各个节点提供服务能力等同且无状态的场景。其缺点也非常明显，该策略将节点视为等同，与实际中复杂的环境不符。加权轮询为轮询的一个改进策略，每个节点会有权重属性，但是因为权重的设置难以做到随实际情况变化，仍有一定的不足。
+* 随机
+
+随机。与轮询相似，只是不需要对每个请求进行编号，每次随机取一个。同样地，该策略也将后端的每个节点是为等同的。另外同样也有改进的加权随机的算法，不再赘述。
+* 最小响应时间
+
+通过记录每次请求所需的时间，得出平均的响应时间，然后根据响应时间选择最小的响应时间。该策略能较好地反应服务器的状态，但是由于是平均响应时间的关系，时间上有些滞后，无法满足快速响应的要求。因此在此基础之上，会有一些改进版本的策略，如只计算最近若干次的平均时间的策略等。
+* 最小并发数
+
+客户端的每一次请求服务在服务器停留的时间可能会有较大的差异,随着工作时间加长,如果采用简单的轮循或随机均衡算法,每一台服务器上的连接进程可能会产生较大的不同,并没有达到真正的负载均衡｡最小并发数的策略则是记录了当前时刻，每个备选节点正在处理的事务数，然后选择并发数最小的节点。该策略能够快速地反应服务器的当前状况，较为合理地将负责分配均匀，适用于对当前系统负载较为敏感的场景。
+
+
+## 其他负载均衡
+
+在微服务环境下的注册中心的使用，也是负载均衡的一种使用场景，比如Spring Cloud Ribbon
+
+RPC调用中也有使用到服务的负载均衡算法：
+
+``` java
+public enum LoadBalance {
+
+    RANDOM(new YoyoRpcLoadBalanceRandomStrategy()),
+    ROUND(new YoyoRpcLoadBalanceRoundStrategy()),
+    LRU(new YoyoRpcLoadBalanceLRUStrategy()),
+    LFU(new YoyoRpcLoadBalanceLFUStrategy()),
+    CONSISTENT_HASH(new YoyoRpcLoadBalanceConsistentHashStrategy());
+    
+}
+``` 
+
+上面是YoyoRpc的负载均衡策略。
+具体代码可以在([https://github.com/tbkk/yoyo-rpc](https://github.com/tbkk/yoyo-rpc))看到
 
 
 
