--- a/_posts/2019-11-20-基于8C32G机器的G1调优实战.md
+++ b/_posts/2019-11-20-基于8C32G机器的G1调优实战.md
@@ -13,7 +13,7 @@ tags:
 
 # 先给各位看一个最终的调优参数
 
-
+``` json
 {
     "XX:+UseG1GC": "-XX:+UseG1GC",
     "XX:MaxGCPauseMillis": "-XX:MaxGCPauseMillis=200",
@@ -43,7 +43,7 @@ tags:
     "XX:+HeapDumpOnOutOfMemoryError": "-XX:+HeapDumpOnOutOfMemoryError",
     "XX:HeapDumpPath": "-XX:HeapDumpPath=${SERVER_LOG}"
 }
-
+```
 在8C32G的机器上
 应用的主要目的是处理流试数据，属于消息驱动型应用
 
