--- a/_posts/2019-11-19-微服务之限流.md
+++ b/_posts/2019-11-19-微服务之限流.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      微服务之限流
-subtitle:   限流
+subtitle:   白话限流
 date:       2019-12-10
 author:     TBKK
 header-img: img/post-bg-cook.jpg
@@ -10,6 +10,24 @@ tags:
     - 微服务
 ---
 
+# 限流算法
+对于一个大的系统，限流是保证整个系统稳定的必要手段之一。意思是，你可以请求是吧，下次再试，但是系统不允许雪崩。
 
-# 敬请期待！  
+## 令牌桶算法
+大家理解一下进高速公路收费的模型就理解了，进高速公路的速度取决于收费员派发路卡的速度，路卡就相当于令牌，这就是令牌桶算法。
 
+## 漏桶算法
+
+就是有个缓冲区，多了就丢弃
+
+## 滑动窗口算法
+### 限流滑动窗口
+将时间片分割的足够小，1ms作为1个小窗口，多个连续的窗口在一起就是一个窗口
+![image](http://www.qinxinfeng.com/img/others/windows-1.jpg)
+
+### TCP滑动窗口
+
+# 限流工具
+## Sentinel限流
+## Hystrix限流
+## Nginx限流
