--- a/_posts/2019-11-19-微服务之全链路监控.md
+++ b/_posts/2019-11-19-微服务之全链路监控.md
@@ -15,10 +15,24 @@ tags:
 目前市面上的全链路监控的成熟产品较多，主要有一下几个。目前公司用了CAT+skywalking的方式。
 ## skywalking
 SkyWalking是本土开源的基于字节码注入的调用链分析，以及应用监控分析工具。特点是支持多种插件，UI功能较强，接入端无代码侵入。目前已加入Apache孵化器。
+* 国内开发人员开发，交流方便
+* 目前已加入Apache孵化器，关注度高
+* ava探针，字节码增强 无侵入，性能高
+* 存储采用ES+Mysql方式
+* 和服务器通信采用gRPC方式
+
 ## CAT
 CAT是大众点评开源的基于编码和配置的调用链分析，应用监控分析，日志采集，监控报警等一系列的监控平台工具。
+监控较强大，有99line，95line，
+* 需要自己埋点，会有代码入侵
+* 无法根据traceid查询
+* 采用http/tcp进行通信
+* 数据保存在mysql,hdfs
+
 ## pinpont
 Pinpoint是韩国人开源的基于字节码注入的调用链分析，以及应用监控分析工具。特点是支持多种插件，UI功能强大，接入端无代码侵入。
+强依赖HBase 暂时不考虑
+
 ## Zipkin
 Zipkin是Twitter开源的调用链分析工具，目前基于spring cloud sleuth得到了广泛的使用，特点是轻量，使用部署简单。
-
+功能较为强大，选择之一
