--- a/_posts/2019-11-18-Thrall实时计算框架.md
+++ b/_posts/2019-11-18-Thrall实时计算框架.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      如何写实时计算框架
-subtitle:   Thrall实时计算框架
+title:      Thrall实时计算框架
+subtitle:   Thrall
 date:       2019-12-10
 author:     TBKK
 header-img: img/post-bg-cook.jpg
